kubernetes/nginx-istio-bg/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-istio-bluegreen
  namespace: bg-pipecd
  labels:
    app: nginx-istio-bluegreen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-istio-bluegreen
      pipecd.dev/variant: primary
  template:
    metadata:
      labels:
        app: nginx-istio-bluegreen
        pipecd.dev/variant: primary
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.0
        ports:
        - containerPort: 80
